5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4179/executions/1644_1053.log
== TEST (2019-04-09 16:39:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Qual o patrono do Harry:?")
if (patrono == "cervo")
	print("cervo eh patrono do Harry Potter")
else:
	patrono, "nao eh patrono do Harry Potter"
	
-- ERROR:
File "XXXX", line 5
    if (patrono == "cervo")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:39:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Qual o patrono do Harry:?")
if (patrono == "cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(patrono, "nao eh patrono do Harry Potter")
	
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:40:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Qual o patrono do Harry: ?")
if (patrono == "cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(patrono, "nao eh patrono do Harry Potter")
	
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:40:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Qual o patrono do Harry:? ")
if (patrono == "cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(patrono, "nao eh patrono do Harry Potter")
	
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:40:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono=input("Qual o patrono do Harry:? ")
if (patrono == "cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(patrono, "nao eh patrono do Harry Potter")
	
-- EXECUTION TIME:
0.144296
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
